Resolved merge conflicts

--- a/mainApp/templates/backend/add-category.html
+++ b/mainApp/templates/backend/add-category.html
@@ -35,8 +35,16 @@
                                 
                                 <div class="col-lg-3">
                                     <div class="mb-3">
-                                        <label class="form-label">Icon<span class="text-danger">*</span></label>
+                                        <label class="form-label">Icon(400x400px)<span class="text-danger">*</span></label>
                                         <input type="file" accept=".png,.jpg,.jpeg,.webp" class="form-control" name="image" required>
+                                    </div>
+                                </div>
+                                
+
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        <label class="form-label">App Background(400x320px)<span class="text-danger">*</span></label>
+                                        <input type="file" accept=".png,.jpg,.jpeg,.webp" class="form-control" name="app_background" required>
                                     </div>
                                 </div>
 
