--- a/mainApp/templates/backend/index.html
+++ b/mainApp/templates/backend/index.html
@@ -239,6 +239,7 @@
                     <ul class="metismenu list-unstyled" id="side-menu">
                         <li class="menu-title" key="t-menu">Menu</li>
                         <li> <a href="/admin-dashboard"><i class="bx bx-home"></i>Dashboard </a></li>
+                        <li> <a href="/slider"> Slider </a></li>
                         <li> <a href="/supercategory"> Supercategory </a></li>
                         <li> <a href="/maincategory"> Maincategory </a></li>
                         <li> <a href="/category"> Category </a></li>
@@ -445,8 +446,7 @@
                     </div>
                     
                     {%block body%}
-                    
-                    
+
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="card">
@@ -592,21 +592,12 @@
                                     });
                                 });
                             });
-                        </script>
-                        
-                        
+                        </script> 
                     </div>
-                    
-                    <!-- end row -->
                 </div>
                 <!-- container-fluid -->
-            </div>                </div>
-                <!-- container-fluid -->
+            </div> 
             </div>
-
-            <!-- End Page-content -->
-
-            
             {%endblock%}
             <script>
                 document.addEventListener('DOMContentLoaded', function () {
