--- a/mainApp/templates/backend/update-maincategory.html
+++ b/mainApp/templates/backend/update-maincategory.html
@@ -59,7 +59,7 @@
                                     <div class="col-lg-2">
                                         <div class="mb-3">
                                             <label class="form-label">Icon<span class="text-danger">*</span></label>
-                                            <input type="file" accept=".png,.jpg,.jpeg" class="form-control" name="image">
+                                            <input type="file" accept=".png,.jpg,.jpeg,.webp" class="form-control" name="image">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
