--- a/mainApp/templates/backend/add-slider.html
+++ b/mainApp/templates/backend/add-slider.html
@@ -1,27 +1,9 @@
 {%extends 'backend/index.html'%}
 {%load static%}
 {%block body%}
-<script>
-    function validateForm() {
-        var name = document.getElementById("name").value;
-        
-        // Extract usernames from the 'unames' object
-        var existingName = [];
-        {% for item in maincategories %}
-        existingName.push('{{ item.name }}');
-        {% endfor %}
-
-        // Check if the entered username already exists in the 'existingName' array
-        if (existingName.includes(name)) {
-            alert("Maincategory already Exist.");
-            return false; // Prevent form submission
-        }
-        return true; // Allow form submission if all validations pass
-    }
-</script>
 
 <!-- ============================================================== -->
-<div class="main-contentw-100">
+<div class="w-100">
     <div class="">
         <div class="container-fluid">
             
@@ -31,21 +13,29 @@
                 <div class="col-xl-12">
                     <div class="card">
                         <div class="card-body">
-
-                            <h4 class=" text-center border bg-light p-1">Add Maincategory</h4>
-                            <form method="post" enctype="multipart/form-data" onsubmit="return validateForm();" >
+                            {% if messages %}
+                            <div class="container">
+                                {% for message in messages %}
+                                <div class="alert alert-{{ message.tags }} mt-2" role="alert">
+                                    {{ message }}
+                                </div>
+                                {% endfor %}
+                            </div>
+                            {% endif %}
+                            <h4 class=" text-center">Add Brand</h4>
+                            <form method="post" enctype="multipart/form-data">
                                 {%csrf_token%}
                                 <div class="row">
                                 <div class="col-lg-3">
                                    <div class="mb-3">
                                        <label class="form-label">Name<span class="text-danger">*</span></label>
-                                       <input type="text" id="name" class="form-control" placeholder="Enter Name"name="name" required>
+                                       <input type="text" class="form-control" placeholder="Enter Name"name="name" required>
                                    </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         <label class="form-label">Icon(100x100px)<span class="text-danger">*</span></label>
-                                        <input type="file" accept=".png,.jpg,.jpeg,.webp" class="form-control" name="image" required>
+                                        <input type="file" accept=".png,.jpg,.jpeg" class="form-control" name="image" required>
                                     </div>
                                 </div>
                                 
